Added batch deleting support

--- a/templates/builds/show.html
+++ b/templates/builds/show.html
@@ -1,7 +1,7 @@
 <ion-header-bar>
   <button ng-click="rebuild()" class="button button-positive">Rebuild</button>
   <h1 class="title">{{build.repository.name}}/{{build.branch}}</h1>
-  <button ng-click="remove()" class="button button-assertive">Remove</button>
+  <button ng-click="remove(build)" class="button button-assertive">Remove</button>
 </ion-header-bar>
 
 <ion-content class="output" scroll="false" autoscroll="autoscroll">
