--- a/templates/builds/show.html
+++ b/templates/builds/show.html
@@ -1,39 +1,49 @@
-<ion-header-bar>
-  <button ng-click="rebuild()" class="button button-positive">Rebuild</button>
-  <h1 class="title">
-    <a target="_blank" ng-href="{{::build.push.compare}}">{{::build.push.repository.name}}/{{::build.push.ref | branch}}</a>
-    <span ng-if="build.finishedAt" ng-bind=":: build.finishedAt - build.startedAt | time"></span>
-    <span ng-if="!build.finishedAt">
-      <timer start-time="build.startedAt">{{time | time}}</timer>
-    </span>
-  </h1>
-  <button ng-click="remove(build)" class="button button-assertive">Remove</button>
-</ion-header-bar>
+<ion-view>
+  <ion-nav-buttons side="right">
+    <button ng-click="rebuild()" class="button button-positive">Rebuild</button>
+  </ion-nav-buttons>
 
-<ion-tabs>
-  <ion-tab ng-if="examples.length" icon-on="ion-ios7-filing" icon-off="ion-ios7-filing-outline">
-    <ion-content>
-      <div class="list card" ng-repeat="example in examples | orderBy:'location' track by example.$id">
-        <div class="item item-divider">
-          <h2>{{::example.full_description}}</h2>
-        </div>
+  <ion-nav-buttons site="left">
+    <button ng-click="remove(build)" class="button button-assertive">Remove</button>
+  </ion-nav-buttons>
 
-        <div class="item">
-          <pre><code ng-bind-html="::example.exception | ansiHtml"></code></pre>
-        </div>
+  <ion-nav-title>
+    <h1 class="title">
+      <a target="_blank" ng-href="{{::build.push.compare}}">{{::build.push.repository.name}}/{{::build.push.ref | branch}}</a>
+      <span ng-if="build.finishedAt" ng-bind=":: build.finishedAt - build.startedAt | time"></span>
+      <span ng-if="!build.finishedAt"><timer start-time="build.startedAt">{{time | time}}</timer></span>
+    </h1>
+  </ion-nav-title>
 
-        <div class="item item-body" ng-if="example.url && example.capture" ng-click="showCapture = !showCapture">
-          <code ng-if="!showCapture">{{::example.url}}</code>
-          <img ng-if="showCapture" ng-src="{{::example.capture}}"/>
-        </div>
+  <ion-tabs>
+    <ion-tab ng-if="examples.length" icon-on="ion-ios7-filing" icon-off="ion-ios7-filing-outline">
+      <ion-nav-view>
+        <ion-content>
+          <div class="list card" ng-repeat="example in examples | orderBy:'location' track by example.$id">
+            <div class="item item-divider">
+              <h2>{{::example.full_description}}</h2>
+            </div>
 
-        <div class="item item-body"><a target="_blank" ng-href="{{githubFileUrl(example.location)}}"><code>{{::example.location}}</code></a></div>
-      </div>
-    </ion-content>
-  </ion-tab>
-  <ion-tab icon-on="ion-ios7-clock" icon-off="ion-ios7-clock-outline">
-    <ion-content class="output" scroll="false" autoscroll="autoscroll">
-      <pre><code ng-repeat="chunk in log track by chunk.$id" ng-bind-html="::chunk.$value | ansiHtml"></code></pre>
-    </ion-content>
-  </ion-tab>
-</ion-tabs>
+            <div class="item">
+              <pre><code ng-bind-html="::example.exception | ansiHtml"></code></pre>
+            </div>
+
+            <div class="item item-body" ng-if="example.url && example.capture" ng-click="showCapture = !showCapture">
+              <code ng-if="!showCapture">{{::example.url}}</code>
+              <img ng-if="showCapture" ng-src="{{::example.capture}}"/>
+            </div>
+
+            <div class="item item-body"><a target="_blank" ng-href="{{githubFileUrl(example.location)}}"><code>{{::example.location}}</code></a></div>
+          </div>
+        </ion-content>
+      </ion-nav-view>
+    </ion-tab>
+    <ion-tab icon-on="ion-ios7-clock" icon-off="ion-ios7-clock-outline">
+      <ion-nav-view>
+        <ion-content class="output" scroll="false" autoscroll="autoscroll">
+          <pre><code ng-repeat="chunk in log track by chunk.$id" ng-bind-html="::chunk.$value | ansiHtml"></code></pre>
+        </ion-content>
+      </ion-nav-view>
+    </ion-tab>
+  </ion-tabs>
+</ion-view>
