--- a/templates/builds/show.html
+++ b/templates/builds/show.html
@@ -16,7 +16,7 @@
   </ion-nav-title>
 
   <ion-tabs>
-    <ion-tab ng-if="examples.length" icon-on="ion-ios7-filing" icon-off="ion-ios7-filing-outline" badge="examples.length">
+    <ion-tab ng-if="examples.length" icon-on="ion-ios7-filing" icon-off="ion-ios7-filing-outline" badge="examples.length" badge-style="badge-assertive">
       <ion-nav-view>
         <ion-content>
           <div class="list card" ng-repeat="example in examples | orderBy:'location' track by example.$id">
