--- a/templates/builds/show.html
+++ b/templates/builds/show.html
@@ -10,12 +10,10 @@
   <ion-nav-title>
     <h1 class="title">
       <a target="_blank" ng-href="{{::build.push.compare}}">{{::build.push.repository.name}}/{{::build.push.ref | branch}}</a>
-      <span ng-if="build.finishedAt" ng-bind=":: build.finishedAt - build.startedAt | time"></span>
-      <span ng-if="!build.finishedAt"><timer start-time="build.startedAt">{{time | time}}</timer></span>
     </h1>
   </ion-nav-title>
 
-  <ion-tabs>
+  <ion-tabs class="tabs-icon-left">
     <ion-tab ng-if="examples.length" icon-on="ion-ios7-filing" icon-off="ion-ios7-filing-outline" badge="examples.length" badge-style="badge-assertive">
       <ion-nav-view>
         <ion-content>
@@ -38,7 +36,7 @@
         </ion-content>
       </ion-nav-view>
     </ion-tab>
-    <ion-tab icon-on="ion-ios7-clock" icon-off="ion-ios7-clock-outline">
+    <ion-tab title="{{duration | time}}" icon-on="ion-ios7-clock" icon-off="ion-ios7-clock-outline">
       <ion-nav-view>
         <ion-content class="output" scroll="false" autoscroll="autoscroll">
           <pre><code ng-repeat="chunk in log track by chunk.$id" ng-bind-html="::chunk.$value | ansiHtml"></code></pre>
