--- a/templates/builds/show.html
+++ b/templates/builds/show.html
@@ -9,7 +9,7 @@
   </ion-modal-view>
 </script>
 
-<ion-view>
+<ion-view style="background-color:#e1e1e1">
   <ion-nav-buttons side="right">
     <button ng-click="rebuild()" class="button button-positive">Rebuild</button>
   </ion-nav-buttons>
