--- a/templates/builds/show.html
+++ b/templates/builds/show.html
@@ -14,7 +14,7 @@
   </ion-nav-title>
 
   <ion-tabs class="tabs-icon-left">
-    <ion-tab ng-if="examples.length" icon-on="ion-ios7-filing" icon-off="ion-ios7-filing-outline" badge="examples.length" badge-style="badge-assertive">
+    <ion-tab ng-if="examples.length" icon-on="ion-ios-filing" icon-off="ion-ios-filing-outline" badge="examples.length" badge-style="badge-assertive">
       <ion-nav-view>
         <ion-content>
           <div class="list card" ng-repeat="example in examples | orderBy:'location' track by example.$id">
@@ -35,7 +35,7 @@
         </ion-content>
       </ion-nav-view>
     </ion-tab>
-    <ion-tab title="{{duration | time}}" icon-on="ion-ios7-clock" icon-off="ion-ios7-clock-outline">
+    <ion-tab title="{{duration | time}}" icon-on="ion-ios-clock" icon-off="ion-ios-clock-outline">
       <ion-nav-view>
         <ion-content class="output" scroll="false" autoscroll="autoscroll">
           <pre><code ng-repeat="chunk in log track by chunk.$id" ng-bind-html="::chunk.$value | ansiHtml"></code></pre>
